# libtetris

./: Cargo.toml  Readme.md  bacon.toml
examples/: Readme.md  index.html  main.mjs  main.rs
examples/native/: main.c  test.c  tetris.h
examples/src/: random.js
examples/wasm/: main.mjs
src/: board.rs  game.rs  lib.rs  main.mjs  main.rs  native.rs  random.js  shape.rs  tetromino.rs  wasm_game.rs
