[package]
name = "libtetris"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "A basic tetris implementation"
repository = "https://github.com/2000Slash/libtetris"
readme = "Readme.md"
keywords = ["tetris"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
rand = "0.8.5"

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
