[package]
name = "libtetris"
version = "0.0.5"
edition = "2021"
license = "MIT"
description = "A basic tetris implementation"
repository = "https://github.com/2000Slash/libtetris"
readme = "Readme.md"
keywords = ["tetris"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tetris"
crate-type = ["cdylib", "lib"]

[dev-dependencies]
rand = "0.8.5"

[dependencies]
wasm-bindgen = { version = "0.2.84", optional = true}
console_error_panic_hook = { version = "0.1.7", optional = true}

[features]
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook"]
native = []